fix background game

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 body{
     background-image: url("../images/background.png");
+    background-size: 100%;
     background-repeat: no-repeat;
     color: #8A2127;
     font-family: Roboto;
