--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,17 +14,20 @@ main{
 }
 #context-title{
     font-size: 48px;
+    z-index: 1;
 }
 
 #context-ctx{
     font-size: 23px;
     margin-right: 5%;
     text-align: justify;
+    z-index: 1;
 }
 
 #question{
     font-size: 48px;
     font-weight: 700;
+    z-index: 1;
 }
 
 #opt{
@@ -32,6 +35,7 @@ main{
     gap: 10px;
     flex-direction: column;
     align-items: center;
+    z-index: 1;
 }
 
 .opts{
@@ -43,6 +47,7 @@ main{
     cursor: pointer;
     width: 400px;
     text-align: center;
+    z-index: 1;
 }
 
 .selected_opt{
@@ -54,6 +59,7 @@ main{
     border-radius: 45px;
     height: 40rem;
     width: auto;
+    z-index: -1;
 }
 
 #next{
@@ -74,6 +80,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 20px 5% 0 5%;
+    z-index: 11;
 }
 
 #logoNDL, #logoRAC {
@@ -83,4 +90,8 @@ header{
 
 #context-title{
     text-align: center;
+}
+
+#secret{
+    z-index: 0;
 }
